# Chronos

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_shader.ps1  make.cmd  reflect.json
moudle_manager/: placeholder.py
reflect/: Access.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  Field.h  Klass.cpp  Klass.h  KlassInfo.cpp  KlassInfo.h  KlassParser.cpp  KlassParser.h  MetaInfo.h  MetaInfoSolver.cpp  MetaInfoSolver.h  Metaspace.h  Method.h  MethodParam.h  ValueType.h  head_for_reflect.cpp  head_for_reflect.h  head_for_reflect1.h  reflect.cpp  reflect.json  reflect_bp.cpp  reflect_bp.h  reflect_test.cpp  test.json  tmp.h  tmp_test.h
reflect/reflect_api/: Access.h  CallParam.h  Constructor.cpp  Constructor.h  Field.h  Klass.h  MetaInfo.h  MetaPrefix.h  Metaspace.cpp  Metaspace.h  Method.h  MethodParam.h  ValueType.h
resources/models/: box.fbx  box2.fbx  grid.fbx  high_sphere.fbx  sphere.fbx  test.fbx
resources/shader/d3d11/: basic_pixel.cso  basic_pixel.hlsl  basic_vert.cso  default_pixel.hlsl  default_vert.hlsl  test_pixel.hlsl  test_vert.hlsl  vsfxaa.hlsl
shaders/src/: basic_pixel.hlsl  basic_vert.hlsl  default_pixel.hlsl  default_vert.hlsl  pbr_pixel.hlsl  pbr_vert.hlsl  test_pixel.hlsl
src/: BaseChronos.cpp  BaseChronos.h  BaseChronosEngine.cpp  BaseChronosEngine.h  BaseComponent.cpp  BaseComponent.h  BaseGameObject.cpp  BaseGameObject.h  BaseScene.cpp  BaseScene.h  Camera.cpp  Camera.h  Chronos.cpp  Chronos.h  ChronosEditorStarter.cpp  ChronosEditorStarter.h  ChronosEngine.h  ChronosGameStarter.cpp  ChronosGameStarter.h  ChronosWindow.cpp  ChronosWindow.h  Event.h  GameObject.h  GenericParam.hpp  Log.cpp  Log.h  Option.h  Param.cpp  Param.h  ParamList.cpp  ParamList.h  Resource.h  ResourceLoader.cpp  ResourceLoader.h  Scene.h  StringHelper.cpp  TestGameObject.cpp  TestGameObject.h  Timer.cpp  Transform.cpp  (+7 more)
src/asset_manager/: Asset.cpp  Asset.h  AssetManager.h  AssetType.h  IAssetInstancer.h  IAssetLoader.h
src/base/: BaseTypes.h  Camera.cpp  Camera.h  Constants.h  Event.h  GenericParam.hpp  Log.cpp  Log.h  Math.h  Param.cpp  Param.h  ParamList.cpp  ParamList.h  StringHelper.cpp  StringHelper.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  Utils.cpp  Utils.h  VK.h  apidef.h
src/component/: BaseComponent.cpp  BaseComponent.h  CameraComponent.h  Component.h  DefaultRootComponent.h  RenderableComponent.cpp  RenderableComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h  TransformComponent.h
src/editor/: ChronosEditor.cpp  ChronosEditor.h  ControlUI.cpp  ControlUI.h  EventBridge.cpp  EventBridge.h
src/engine/: BaseChronosEngine.cpp  BaseChronosEngine.h  BaseScene.cpp  BaseScene.h  ChronosEngine.cpp  ChronosEngine.h  ChronosWindow.h  EngineState.h  IResLoader.h  Option.h  Resource.h  ResourceLoader.cpp  ResourceLoader.h  Scene.h
src/game_object/: BaseGameObject.cpp  BaseGameObject.h  GameObject.h
src/imgui_control/: ControlUI.cpp  ControlUI.h  TestUI.cpp  TestUI.h
src/model/: PolygonModel.cpp  PolygonModel.h  PolygonModelLoader.cpp  PolygonModelLoader.h
src/module/: CModuleType.h  GlobalValueFix.h  ICModule.h  IRendererModule.h  InterModulePointer.h  ModuleLoader.cpp  ModuleLoader.h
src/platform/windows/: Utils.cpp  Utils.h  WinChronosWindow.cpp  WinChronosWindow.h  windows_common.cpp  windows_common.h
src/platform/windows/render/d3d11/: ChronosD3D11RenderTarget.cpp  ChronosD3D11RenderTarget.h  ChronosD3D11Texture2D.cpp  ChronosD3D11Texture2D.h  ChronosPixelShader.h  ChronosVertexShader.h  D3D11BaseRenderState.cpp  D3D11BaseRenderState.h  D3D11BasicRenderState.cpp  D3D11MaterialRenderState.cpp  D3D11MaterialRenderState.h  D3D11Renderer.cpp  D3D11Renderer.h  D3D11RendererModule.cpp  D3D11RendererModule.h  D3D11VertexDataRenderState.cpp  D3D11VertexDataRenderState.h  D3D11VertexProcRenderState.cpp  D3D11VertexProcRenderState.h  FXAAMan.cpp  FXAAMan.h  MoudleEntry.cpp
src/platform/windows/window/d3d11/: WinChronosWindow.cpp  WinChronosWindow.h
src/render/: AttributeSet.cpp  AttributeSet.h  BaseRenderStateHolder.cpp  BaseRenderStateHolder.h  BaseRenderableObject.cpp  BaseRenderableObject.h  BaseShader.h  BaseShaderConfig.cpp  BaseShaderConfig.h  DefaultMaterial.h  DefaultVetexProc.h  DrawTopologyType.h  Material.h  Mesh.cpp  Mesh.h  PBRMaterial.h  PBRVertexProc.h  Param.cpp  Param.h  PixelShader.h  RenderBuffer.h  RenderConstantData.cpp  RenderConstantData.h  RenderContext.cpp  RenderContext.h  RenderState.h  RenderStateHolder.h  RenderTarget.h  RenderableObject.h  Renderer.h  Shader.h  ShaderConfig.h  TestMaterial.h  TestVetexProc.h  Texture.h  Texture2D.h  Types.h  VertexData.cpp  VertexData.h  VertexProc.h  (+1 more)
src/render/d3d11/: ChronosD3D11RenderTarget.cpp  ChronosD3D11RenderTarget.h  ChronosD3D11Texture2D.cpp  ChronosD3D11Texture2D.h  ChronosPixelShader.h  ChronosVertexShader.h  D3D11BaseRenderState.h  D3D11BasicRenderState.cpp  D3D11MeshRenderState.cpp  D3D11MeshRenderState.h  D3D11Renderer.cpp  D3D11Renderer.h  FXAAMan.cpp  FXAAMan.h  common.cpp  common.h
src/window/: ChronosWindow.cpp  ChronosWindow.h
test/: px_test.cpp  test.cpp
